src/objects/FieloAlpha__Tag__c.object
<CustomObject>
    <description>[Frontend] Tags that can be applied to a reward or a content feed in order to highlight or segment them.</description>
    <fields>
        <fullName>FieloPLT__AttachmentId__c</fullName>
        <description>Image of the Tag</description>
        <label>Image source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Filter__c</fullName>
        <label>Filter</label>
        <picklist>
            <picklistValues>
                <fullName>MyRewards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WishList</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Likes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Image__c</fullName>
        <description>Link to the phisical attachment</description>
        <formula>IF( 
    AND( 
        NOT( ISNULL(FieloPLT__AttachmentId__c) )
        , NOT( ISBLANK(FieloPLT__AttachmentId__c) ) 
    ) ,
      IMAGE(
            IF( CONTAINS(FieloPLT__AttachmentId__c, &apos;&amp;LastModifiedDate&apos;), LEFT(FieloPLT__AttachmentId__c, FIND(&apos;&amp;LastModifiedDate&apos;, FieloPLT__AttachmentId__c)), FieloPLT__AttachmentId__c)
            ,&quot;photo&quot;,50, 50),
    &apos;&apos;)</formula>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the program to which the tag belongs</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloPLT__Program__c</referenceTo>
        <relationshipLabel>Tags</relationshipLabel>
        <relationshipName>Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tag</label>
        <referenceTo>FieloPLT__Tag__c</referenceTo>
        <relationshipLabel>Tags</relationshipLabel>
        <relationshipName>Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__TotalRewards__c</fullName>
        <description>Quantity of rewards with this tag</description>
        <label>Total Rewards</label>
        <summaryForeignKey>FieloPLT__RewardTag__c.FieloPLT__Tag__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Tag</label>
    <listViews>
        <fullName>FieloPLT__All</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__TotalRewards__c</columns>
        <columns>FieloPLT__Order__c</columns>
        <columns>FieloPLT__Image__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloPLT__All_Tags</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Image__c</columns>
        <columns>FieloPLT__TotalRewards__c</columns>
        <columns>FieloPLT__Program__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Tags</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tags</pluralLabel>
    <recordTypes>
        <fullName>FieloPLT__Dynamic</fullName>
        <active>true</active>
        <label>Dynamic</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloPLT__ModifyProgram</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Program</description>
        <errorConditionFormula>ISCHANGED(FieloPLT__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloPLT__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloPLT__Program__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__OrderMustBePositive</fullName>
        <active>true</active>
        <errorConditionFormula>FieloPLT__Order__c &lt; 0</errorConditionFormula>
        <errorDisplayField>FieloPLT__Order__c</errorDisplayField>
        <errorMessage>Order must be positive</errorMessage>
    </validationRules>
</CustomObject>